@@ -1,3 +1,8 @@
+2009-03-23  Hubert Figuiere  <hub@figuiere.net>
+
+	* libxml++/parsers/textreader.cc: severity_ was not initialised
+	at construction time.
+
 2.26.0:
 
 2009-03-16  Murray Cumming  <murrayc@murrayc.com>
